tests/sksl/errors/ReservedNameNamespace.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'namespace'
1 error
